Updated backend services for order, notifications, cart and product